<resources>
    <string name="app_name">Timeline do Vendedor</string>
    <string name="task_type">Tipo de Tarefa</string>
    <string name="customer">Cliente</string>
    <string name="monday">Seg</string>
    <string name="tuesday">Ter</string>
    <string name="wednesday">Qua</string>
    <string name="thursday">Qui</string>
    <string name="friday">Sex</string>
    <string name="saturday">Sab</string>
    <string name="sunday">Dom</string>
    <string name="task_date">Data da Tarefa</string>
    <string name="add_task">Adicionar Tarefa</string>
    <string name="new_task">Nova Tarefa</string>
    <string name="select_date">Selecionar Data</string>
    <string name="confirm">Confirmar</string>
    <string name="description">Descrição</string>
    <string name="create_task">Agendar Tarefa</string>
    <string name="empty_date">A data não pode ficar vazia!</string>
    <string name="empty_customer">O campo do cliente não pode ficar vazio</string>
    <string name="empty_description">O campo descrição não pode ficar vazio</string>
    <string name="save_error">Não foi possível adicionar a tarefa</string>
    <string name="firebase_error">Ocorreu um erro ao buscar informações</string>

</resources>
